--- a/style/style.scss
+++ b/style/style.scss
@@ -81,7 +81,7 @@ main {
     font-size: 18px;
     border: 2px solid rgb(201, 196, 196);
     background: lightblue;
-    margin: 5px;
+    margin: 1px;
     text-align: center;
     padding: 5px 5px;
     opacity: 70%;
@@ -124,4 +124,9 @@ main {
 .pagesnumbers {
     display: flex;
     justify-content: center;
+}
+
+
+.subwrapper {
+    display: none;
 }
