--- a/style/style.scss
+++ b/style/style.scss
@@ -51,6 +51,7 @@ body {
     opacity: 70%;
     transition: 2s;
 
+
 }
 
 main {
@@ -70,10 +71,17 @@ main {
     justify-content: center;
     padding: 100px 50px;
     position: relative;
+}
+
+.popUp_list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 100px 50px;
 
 
 }
-
 
 
 .elm {
@@ -87,7 +95,8 @@ main {
     opacity: 70%;
     width: 250px;
     min-width: 250px;
-    position: relative;
+
+
 }
 
 .elm:hover {
@@ -95,7 +104,7 @@ main {
     color: greenyellow;
     box-shadow: 1px 4px greenyellow;
     background: rgb(53, 50, 50);
-    opacity: 70%;
+    opacity: 80%;
     transition: 1s;
 }
 
@@ -127,6 +136,45 @@ main {
 }
 
 
-.subwrapper {
-    display: none;
+// .subwrapper {
+//     display: none;
+// }
+
+
+.modal {
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+    background-color: black;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    min-width: 40%;
+    min-height: 300px;
+    opacity: 70%;
+
+}
+
+.btnModal {
+    color: blue;
+    background: lightblue;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin-left: auto;
+    outline: none;
+}
+
+.charachersName {
+    font-size: 18px;
+    background: red;
+    text-align: center;
+    margin: 5px;
+}
+
+.charachers {
+    color: greenyellow;
+    font-size: 16px;
+    word-spacing: 2px;
 }
