--- a/style/style.scss
+++ b/style/style.scss
@@ -11,8 +11,6 @@ body {
     background-image: url("/images/at-at-4868964_1280.jpg");
     background-size: cover;
     background-position: center center;
-
-
 }
 
 .navBar {
@@ -177,4 +175,9 @@ main {
     color: greenyellow;
     font-size: 16px;
     word-spacing: 2px;
+}
+
+.notfount {
+    color: red;
+    font-weight: bold;
 }
