--- a/style/style.css
+++ b/style/style.css
@@ -199,4 +199,9 @@ main {
   font-size: 16px;
   word-spacing: 2px;
 }
+
+.notfount {
+  color: red;
+  font-weight: bold;
+}
 /*# sourceMappingURL=style.css.map */
