--- a/style/style.scss
+++ b/style/style.scss
@@ -6,12 +6,16 @@
 }
 
 body {
-
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+    font-family: Montserrat;
     height: 100vh;
     background-image: url("/images/at-at-4868964_1280.jpg");
     background-size: cover;
     background-position: center center;
 }
+
+
+
 
 .navBar {
     width: 100%;
@@ -23,6 +27,28 @@ body {
     display: flex;
     justify-content: space-between;
     opacity: 70%;
+}
+
+.StarWars_Characters {
+    color: rgb(192, 192, 34);
+    text-align: center;
+    margin: 1%;
+    background: black;
+    border-radius: 10px;
+    padding: 5px 5px;
+    opacity: 75%;
+
+
+    @media screen and (min-width: 650px) {
+        font-size: 50px;
+        opacity: unset;
+        background: unset;
+        -webkit-text-stroke-width: 0.5px;
+        -webkit-text-stroke-color: black;
+    }
+
+
+
 }
 
 .nav__bar-img {
@@ -39,17 +65,17 @@ body {
     outline: none;
     background: lightblue;
     color: blue;
+    font-size: 16px;
 }
 
 .nav__bar-input:hover {
-    border: 1px solid greenyellow;
-    color: greenyellow;
-    box-shadow: 1px 4px greenyellow;
+    border: 1px solid rgb(192, 192, 34);
+    color: rgb(192, 192, 34);
+    box-shadow: 1px 4px rgb(192, 192, 34);
     background: black;
     opacity: 70%;
     transition: 2s;
-
-
+    font-size: 16px;
 }
 
 main {
@@ -58,7 +84,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    // position: absolute;
 
 }
 
@@ -67,7 +93,7 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 100px 50px;
+    padding: 20px 0px;
     position: relative;
 }
 
@@ -90,7 +116,7 @@ main {
     margin: 1px;
     text-align: center;
     padding: 5px 5px;
-    opacity: 70%;
+    opacity: 80%;
     width: 250px;
     min-width: 250px;
 
@@ -98,39 +124,43 @@ main {
 }
 
 .elm:hover {
-    border: 1px solid greenyellow;
-    color: greenyellow;
-    box-shadow: 1px 4px greenyellow;
-    background: rgb(53, 50, 50);
-    opacity: 80%;
+    border: 1px solid rgb(192, 192, 34);
+    color: rgb(192, 192, 34);
+    box-shadow: 1px 4px rgb(192, 192, 34);
+    background: black;
+    opacity: 85%;
     transition: 1s;
 }
 
 .btns {
     font-size: 20px;
-    color: blue;
-    background: lightblue;
+    color: rgb(192, 192, 34);
+    background: black;
     font-weight: bold;
     padding: 5px 5px;
-    opacity: 70%;
-
     border: 1px solid white;
     margin: 2px;
     outline: none;
-}
-
-.btns:hover {
-    font-size: 20px;
-    color: greenyellow;
-    background: rgb(53, 50, 50);
-    font-weight: bolder;
-    transition: 1s;
+    border: 1px solid rgb(192, 192, 34);
+    opacity: 80%;
 
 }
+
+
 
 .pagesnumbers {
     display: flex;
     justify-content: center;
+
+    @media screen and (min-width: 550px) {
+        // width: 50px;
+        // height: 50px;
+        float: left;
+        position: fixed;
+        bottom: 0;
+        margin-bottom: 10%;
+    }
+
 }
 
 
@@ -177,7 +207,8 @@ main {
     word-spacing: 2px;
 }
 
-.notfount {
+.notfound {
     color: red;
     font-weight: bold;
+    font-size: 40px;
 }
