--- a/style/style.css
+++ b/style/style.css
@@ -230,5 +230,7 @@ main {
   font-weight: bold;
   font-size: 40px;
   font-weight: bold;
+  background: black;
+  padding: 5px 5px;
 }
 /*# sourceMappingURL=style.css.map */
