--- a/style/style.scss
+++ b/style/style.scss
@@ -89,6 +89,10 @@ main {
     justify-content: center;
     padding: 20px 0px;
     position: relative;
+
+    @media screen and (min-width: 750px) {
+        padding: 30px 30px;
+    }
 }
 
 .popUp_list {
