--- a/style/style.scss
+++ b/style/style.scss
@@ -207,8 +207,9 @@ main {
 .notfound {
     color: red;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: bold;
     background: black;
     padding: 5px 5px;
+    display: inline;
 }
