--- a/style/style.css
+++ b/style/style.css
@@ -234,9 +234,10 @@ main {
 .notfound {
   color: red;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 25px;
   font-weight: bold;
   background: black;
   padding: 5px 5px;
+  display: inline;
 }
 /*# sourceMappingURL=style.css.map */
