--- a/style/style.css
+++ b/style/style.css
@@ -31,13 +31,14 @@ body {
 }
 
 .StarWars_Characters {
+  width: 300px;
   color: #c0c022;
-  margin: 1%;
   background: black;
   border-radius: 10px;
-  padding: 5px 5px;
+  padding: 8px 5px;
   opacity: 80%;
   text-align: center;
+  margin: 2% auto;
 }
 
 @media screen and (min-width: 650px) {
