--- a/style/style.scss
+++ b/style/style.scss
@@ -30,13 +30,15 @@ body {
 }
 
 .StarWars_Characters {
+    width: 300px;
     color: rgb(192, 192, 34);
-    margin: 1%;
+
     background: black;
     border-radius: 10px;
-    padding: 5px 5px;
+    padding: 8px 5px;
     opacity: 80%;
     text-align: center;
+    margin: 2% auto;
 
     @media screen and (min-width: 650px) {
         font-size: 50px;
