--- a/style/style.css
+++ b/style/style.css
@@ -48,6 +48,7 @@ body {
     background: unset;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+    width: unset;
   }
 }
 
