--- a/style/style.scss
+++ b/style/style.scss
@@ -40,12 +40,14 @@ body {
     text-align: center;
     margin: 2% auto;
 
+
     @media screen and (min-width: 650px) {
         font-size: 50px;
         opacity: unset;
         background: unset;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: black;
+        width: unset;
     }
 }
 
