--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@
 body {
   font-family: Montserrat;
   height: 100vh;
-  background-image: url("/images/at-at-4868964_1280.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0.2))), url("/images/at-at-4868964_1280.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.2) 100%), url("/images/at-at-4868964_1280.jpg");
   background-size: cover;
   background-position: center center;
 }
