--- a/style/style.scss
+++ b/style/style.scss
@@ -32,8 +32,7 @@ body {
 .StarWars_Characters {
     width: 300px;
     color: rgb(192, 192, 34);
-
-    background: black;
+    //background: black;
     border-radius: 10px;
     padding: 8px 5px;
     opacity: 80%;
