--- a/style/style.css
+++ b/style/style.css
@@ -204,9 +204,16 @@ main {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  min-width: 40%;
+  width: 90%;
+  min-width: 90%;
   min-height: 300px;
   opacity: 80%;
+}
+
+@media screen and (min-width: 550px) {
+  .modal {
+    min-width: 400px;
+  }
 }
 
 .btnModal {
