--- a/style/style.css
+++ b/style/style.css
@@ -97,6 +97,12 @@ main {
           align-items: center;
 }
 
+@media screen and (min-width: 1600px) {
+  main {
+    padding: 100px 100px;
+  }
+}
+
 .list {
   display: -webkit-box;
   display: -ms-flexbox;
